[package]
name = "vmc_ip_reporter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hostname = "0.3.1"
network-interface = "1.0.1"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0"
vmc_common = { path = "../vmc_common" }
